[package]
name = "fiat_filter_rpc_runtime_api"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2021"


[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features=false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features=false }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features=false, features=["derive"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-runtime/std",
    "sp-api/std",
]
